check & testing Db connection and get Species
