# sealife/src/main/resources/static/api.yaml
@@ -38,7 +38,9 @@ paths:
           content:
             'application/json':
               schema:
-                type: string
+                type: array
+                items:
+                  $ref: "#/components/schemas/SpecieDto"
 components:
   schemas:
     ObservationSheetDto:
@@ -76,6 +78,15 @@ components:
         apneaTime:
           type: integer
           format: int32
+    SpecieDto:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        specieName:
+          type: string
+
 
 
 
